# Ulvek

./: .gitignore  README.md  agentic_ai_code_assistant_backend.md  cli_audit_report.md  main.py  people.csv  prompts_analysis.csv  pyproject.toml  session_output.md
src/: agent.py  config.py
src/agents/: agent.py  schemas.py
src/agents/prompts/: chat.py  context_retriever.py  orchestrator.py  reviewer.py  task_classification.py  worker.py
src/app/: config.py
src/app/agents/: agent.py  agent_graph.py  agent_test.py  agentlite.py  lite_agent_schemas.py  schemas.py
src/app/agents/prompts/: common.py  context_retriever.py  docs_generation.py  orchestrator.py  qa.py  reviewer.py  task_classification.py  worker.py
src/app/api/: main.py
src/app/tools/: chunkers.py  codebase.py  file_operations.py  files_edit.py  interactive_tools.py  memory.py  search_files.py  terminal_executor.py  tools_schemas.py
src/app/tools/test/: .hidden_file.py  search_file_test.py
src/app/utils/: chunkers.py  chunks_schemas.py  converters.py  logger.py  schema_generator.py
src/app/utils/frontends_adapters/: interaction_manager.py
src/app/workflow/: Langgraph_architecture.html  enums.py  graph.py  main_graph.py  types.py  utils.py
src/app/workflow/subgraphs/: coding_workflow.py  planning_workflow.py
src/cli/: .old.main.py  main.py  theme.py
src/tools/: chunkers.py  codebase.py  encryption.py  files_edit.py  interactive_tools.py  memory.py  prompt_eval.py  search_docs.py  search_files.py  terminal_executor.py
src/utils/: converters.py  logger.py
src/workflow/: README.md  graph.py  graph2.py  runner.py
