[project]
name = "ulvek"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "langgraph>=0.5.4",
    "mem0ai>=0.1.115",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.4.7",
    "sentence-transformers>=5.0.0",
]
